Door Macro 10.0.1. - the GM can set a macro to be executed as GM.

--- a/lang/en.json
+++ b/lang/en.json
@@ -5,6 +5,7 @@
     "whenLocked": "When Locked",
     "whenUnlocked": "When Unlocked",
     "whenHidden": "When Hidden",
-    "whenRevealed": "When Revealed"
+    "whenRevealed": "When Revealed",
+    "AS_GM": "Execute as GM:"
   }
 }
